{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 43,
  "lineage": "992c0113-0d26-6432-c583-80010c43c784",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:internet-gateway/igw-0517169f27257eeb9",
            "id": "igw-0517169f27257eeb9",
            "owner_id": "194221841417",
            "tags": {
              "Name": "splitbuddy-igw"
            },
            "tags_all": {
              "Name": "splitbuddy-igw"
            },
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:route-table/rtb-0c2e74bca38d582b8",
            "id": "rtb-0c2e74bca38d582b8",
            "owner_id": "194221841417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0517169f27257eeb9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "splitbuddy-public-rt"
            },
            "tags_all": {
              "Name": "splitbuddy-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b54d0692473b88a",
            "route_table_id": "rtb-0c2e74bca38d582b8",
            "subnet_id": "subnet-012562e43002c8814"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:security-group/sg-008de1aac100b5a6e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008de1aac100b5a6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5900,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5900
              }
            ],
            "name": "splitbuddy-app-sg20250728064809833500000002",
            "name_prefix": "splitbuddy-app-sg",
            "owner_id": "194221841417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "splitbuddy-app-sg"
            },
            "tags_all": {
              "Name": "splitbuddy-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:security-group/sg-04faedec9ffad1e3e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04faedec9ffad1e3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008de1aac100b5a6e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "splitbuddy-db-sg20250728064812150400000004",
            "name_prefix": "splitbuddy-db-sg",
            "owner_id": "194221841417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "splitbuddy-db-sg"
            },
            "tags_all": {
              "Name": "splitbuddy-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:subnet/subnet-0aa8702ff32d876f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa8702ff32d876f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194221841417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "splitbuddy-private-subnet"
            },
            "tags_all": {
              "Name": "splitbuddy-private-subnet"
            },
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:subnet/subnet-07c315b31cff19d9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c315b31cff19d9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194221841417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "splitbuddy-private-subnet-2"
            },
            "tags_all": {
              "Name": "splitbuddy-private-subnet-2"
            },
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:subnet/subnet-012562e43002c8814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012562e43002c8814",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194221841417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "splitbuddy-public-subnet"
            },
            "tags_all": {
              "Name": "splitbuddy-public-subnet"
            },
            "vpc_id": "vpc-00e872dfd083af3b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194221841417:vpc/vpc-00e872dfd083af3b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c168dd5c592969e9",
            "default_route_table_id": "rtb-02a6191f1bdb2736e",
            "default_security_group_id": "sg-05c0bad0ed5881be6",
            "dhcp_options_id": "dopt-05faf38f7cbc39366",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e872dfd083af3b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a6191f1bdb2736e",
            "owner_id": "194221841417",
            "tags": {
              "Name": "splitbuddy-vpc"
            },
            "tags_all": {
              "Name": "splitbuddy-vpc"
            }
          }
        }
      ]
    }
  ]
}